--- a/src/modules/base/visualPicker/visualPicker.css
+++ b/src/modules/base/visualPicker/visualPicker.css
@@ -150,6 +150,8 @@
     .avonni-visual-picker__figure-header,
 .avonni-visual-picker__figure-image-background
     .avonni-visual-picker__figure-header {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
     --avonni-visual-picker-title-text-color: var(
         --avonni-visual-picker-overlay-text-color,
         #ffffff
@@ -742,7 +744,7 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    flex: 0 0 auto;
+    flex: 0 1 auto;
 }
 
 .avonni-visual-picker__figure-image-container img {
